[workspace]
resolver = "2"
members = [
  "framework/core",
  "framework/instruments",
  "framework/instruments_derive",
  "framework/runner",
  "framework/summary_model",

  "bindings/client",
  "bindings/runner",
  "bindings/kitsune_client",
  "bindings/kitsune_runner",

  "summariser",

  "happ_builder",

  "scenarios/app_install",
  "scenarios/dht_sync_lag",
  "scenarios/first_call",
  "scenarios/full_arc_create_validated_zero_arc_read",
  "scenarios/kitsune_continuous_flow",
  "scenarios/local_signals",
  "scenarios/mixed_arc_get_agent_activity",
  "scenarios/mixed_arc_must_get_agent_activity",
  "scenarios/remote_call_rate",
  "scenarios/remote_signals",
  "scenarios/single_write_many_read",
  "scenarios/two_party_countersigning",
  "scenarios/validation_receipts",
  "scenarios/write_get_agent_activity",
  "scenarios/write_query",
  "scenarios/write_read",
  "scenarios/write_validated",
  "scenarios/write_validated_must_get_agent_activity",
  "scenarios/zero_arc_create_data",
  "scenarios/zero_arc_create_data_validated",
  "scenarios/zero_arc_create_and_read",
  "scenarios/zome_call_single_value",

  "zomes/return_single_value/coordinator",
  "zomes/crud/coordinator",
  "zomes/crud/integrity",
  "zomes/timed/coordinator",
  "zomes/timed/integrity",
  "zomes/timed_and_validated/coordinator",
  "zomes/timed_and_validated/integrity",
  "zomes/callback/coordinator",
  "zomes/callback/integrity",
  "zomes/large/coordinator",
  "zomes/signal/coordinator",
  "zomes/remote_call/coordinator",
  "zomes/remote_call/integrity",
  "zomes/remote_signal/coordinator",
  "zomes/remote_signal/integrity",
  "zomes/countersigning/coordinator",
  "zomes/countersigning/integrity",
  "zomes/validated/coordinator",
  "zomes/validated/integrity",
  "zomes/agent_activity/coordinator",
  "zomes/agent_activity/integrity",
  "zomes/validated_must_get_agent_activity/coordinator",
  "zomes/validated_must_get_agent_activity/integrity",
]

# By default, don't build the scenarios or zomes.
# The scenarios should only be built when they are being run.
# The zomes should only be built into wasm as part of running scenarios.
default-members = [
  "framework/core",
  "framework/instruments",
  "framework/instruments_derive",
  "framework/runner",

  "bindings/client",
  "bindings/runner",
  "bindings/kitsune_client",
  "bindings/kitsune_runner",

  "summariser",

  "happ_builder",
]

[workspace.package]
version = "0.5.0-dev.0"
license = "MIT"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://holochain.org"
repository = "https://github.com/holochain/wind-tunnel"

[workspace.dependencies]
anyhow = "1.0.80"
bytes = "1.10"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
parking_lot = "0.12.1"
log = "0.4.20"
env_logger = "0.11.2"
derive_more = { version = "2", features = ["error", "display", "debug"] }
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
toml = "0.8.10"
serde = "1"
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
sysinfo = "0.35"
url = "2.5.0"
tabled = "0.20"
indicatif = "0.17.8"
# TODO waiting for 0.7.3+ release to use the new reqwest-client-native-tls-vendored feature
influxdb = { version = "0.7.3-beta.1", package = "ts_influxdb", features = [
  "reqwest-client-native-tls-vendored",
] }
influxive-core = "0.0.2-alpha.1"
nanoid = "0.4.0"
which = "8.0"
rand = "0.8"
itertools = "0.14"
chrono = "0.4"
sha3 = "0.10"
polars = { version = "0.48", features = [
  "lazy",
  "json",
  "strings",
  "dynamic_group_by",
  "round_series",
] }
tempfile = "3.13"
futures = "0.3"
thiserror = "2"
pretty_assertions = "1.4"

# Deps for Holochain
holochain_client = { version = "0.7.0" }
holochain_zome_types = { version = "0.5.2" }
holo_hash = { version = "0.5.2" }
holochain_types = { version = "0.5.2" }
holochain_conductor_api = { version = "0.5.2" }
holochain_conductor_config = { version = "0.5.6" }
holochain_serialized_bytes = "0.0.56"
holochain_websocket = { version = "0.5.2" }
hdk = { version = "0.5.2", features = [
  "unstable-functions",
  "unstable-countersigning",
] }
hdi = { version = "0.6.2", features = ["unstable-functions"] }

# Deps for Kitsune
kitsune2 = "0.1.8"
kitsune2_api = "0.1.8"
kitsune2_core = "0.1.8"
kitsune2_gossip = "0.1.8"
kitsune2_transport_tx5 = { version = "0.1.8", default-features = false }

# Framework
wind_tunnel_core = { path = "./framework/core", version = "0.5.0-dev.0" }
wind_tunnel_instruments = { path = "./framework/instruments", version = "0.5.0-dev.0" }
wind_tunnel_instruments_derive = { path = "./framework/instruments_derive", version = "0.5.0-dev.0" }
wind_tunnel_runner = { path = "./framework/runner", version = "0.5.0-dev.0" }
wind_tunnel_summary_model = { path = "./framework/summary_model", version = "0.5.0-dev.0" }

# Bindings
holochain_client_instrumented = { path = "./bindings/client", version = "0.5.0-dev.0" }
holochain_wind_tunnel_runner = { path = "./bindings/runner", version = "0.5.0-dev.0" }
kitsune_client_instrumented = { path = "./bindings/kitsune_client", version = "0.5.0-dev.0" }
kitsune_wind_tunnel_runner = { path = "./bindings/kitsune_runner", version = "0.5.0-dev.0" }
serial_test = "3.2"

# hApp Builder
happ_builder = { path = "./happ_builder", version = "0.1.0" }

# Summarizer
strum = { version = "0.27", features = ["derive"] }

# Zomes for coordinator dependencies
crud_integrity = { path = "./zomes/crud/integrity" }
timed_integrity = { path = "./zomes/timed/integrity" }
timed_and_validated_integrity = { path = "./zomes/timed_and_validated/integrity" }
callback_integrity = { path = "./zomes/callback/integrity" }
remote_call_integrity = { path = "./zomes/remote_call/integrity" }
remote_signal_integrity = { path = "./zomes/remote_signal/integrity" }
countersigning_integrity = { path = "./zomes/countersigning/integrity" }
validated_integrity = { path = "./zomes/validated/integrity" }
agent_activity_integrity = { path = "./zomes/agent_activity/integrity" }
validated_must_get_agent_activity_integrity = { path = "./zomes/validated_must_get_agent_activity/integrity" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev.package."*"]
opt-level = 2
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
