[package]
name = "happ_builder"
version = "0.1.0"
description = "A tool for building happs from TOML configuration"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
toml = { workspace = true }
anyhow = { workspace = true }
holochain_types = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
