[package]
name = "happ_builder"
version = "0.1.0"
description = "A tool for building and fetching happs from TOML configuration"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
holochain_types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
