[package]
name = "holochain_summariser"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
polars = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

wind_tunnel_summary_model = { workspace = true }

[lints]
workspace = true

[features]
test_data = []
