[package]
name = "holochain_summariser"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "holochain_summariser"
path = "src/lib.rs"

[[bin]]
name = "holochain-summariser"
path = "src/main.rs"

[dependencies]
influxdb = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
polars = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

wind_tunnel_summary_model = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
holochain_summariser = { path = ".", features = ["query_test_data"] }
walkdir = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true

[features]
test_data = []
query_test_data = []
