[package]
name = "holochain_client_instrumented"
description = "An instrumented wrapper around the holochain_client"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
version = "0.1.0-alpha.3"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }

wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }

holochain_client = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }

[lints]
workspace = true
