[package]
name = "holochain_client_instrumented"
version = "0.2.0-alpha.2"
description = "An instrumented wrapper around the holochain_client"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }

wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }
wind_tunnel_core = { workspace = true }

holochain_client = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }

[lints]
workspace = true
