[package]
name = "holochain_client_instrumented"
version.workspace = true
description = "An instrumented wrapper around the holochain_client"
documentation = "https://docs.rs/holochain_client_instrumented"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }

wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }
wind_tunnel_core = { workspace = true }

holochain_client = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_websocket = { workspace = true }
kitsune2_api = { workspace = true }

[lints]
workspace = true
