[package]
name = "kitsune_client_instrumented"
version = "0.3.0-dev.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }

kitsune2 = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
kitsune2_gossip = { workspace = true }
kitsune2_transport_tx5 = { workspace = true }

wind_tunnel_core = { workspace = true }
wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
kitsune2_bootstrap_srv = "0.0.1-alpha6"

[lints]
workspace = true
