[package]
name = "kitsune_client_instrumented"
version.workspace = true
description = "An instrumented client for Kitsune2"
documentation = "https://docs.rs/kitsune_client_instrumented"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }

kitsune2 = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
kitsune2_gossip = { workspace = true }
kitsune2_transport_iroh = { workspace = true }

wind_tunnel_core = { workspace = true }
wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
kitsune2_bootstrap_srv = { version = "0.4.0-dev.2", default-features = false, features = [
  "iroh-relay",
] }
rustls = "0.23.36"

[lints]
workspace = true
