[package]
name = "kitsune_wind_tunnel_runner"
version = "0.3.0-dev.1"
description = "Customizes the wind_tunnel_runner for kitsune testing"
license = "MIT"
authors = ["Holochain Dev Team <devcore@holochain.org>"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }

kitsune_client_instrumented = { workspace = true }
wind_tunnel_runner = { workspace = true }

[lints]
workspace = true
