[package]
name = "kitsune_wind_tunnel_runner"
version.workspace = true
description = "Customizes the wind_tunnel_runner for kitsune testing"
documentation = "https://docs.rs/kitsune_wind_tunnel_runner"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

kitsune_client_instrumented = { workspace = true }
wind_tunnel_runner = { workspace = true }

[lints]
workspace = true
