[package]
name = "holochain_wind_tunnel_runner"
version.workspace = true
description = "Customises the wind_tunnel_runner for Holochain testing"
documentation = "https://docs.rs/holochain_wind_tunnel_runner"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wind_tunnel_runner = { workspace = true }
holochain_client_instrumented = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }

[lints]
workspace = true
