[package]
name = "holochain_wind_tunnel_runner"
version.workspace = true
description = "Customises the wind_tunnel_runner for Holochain testing"
documentation = "https://docs.rs/holochain_wind_tunnel_runner"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wind_tunnel_runner = { workspace = true }
wind_tunnel_summary_model = { workspace = true }
holochain_client_instrumented = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
holo_hash = { workspace = true, features = ["kitsune2"] }
holochain_conductor_config = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
