[package]
name = "trycp_client_instrumented"
version = "0.4.0-alpha.1"
description = "An instrumented wrapper around trycp_client"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
url = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }

wind_tunnel_instruments = { workspace = true }
wind_tunnel_instruments_derive = { workspace = true }

trycp_client = { workspace = true }
trycp_api = { workspace = true }
holochain_client = { workspace = true }
tokio-tungstenite = { workspace = true }
holochain_zome_types = { workspace = true }
holo_hash = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_nonce = { workspace = true }
holochain_serialized_bytes = { workspace = true }
kitsune_p2p_types = { workspace = true }

[lints]
workspace = true
