[package]
name = "trycp_wind_tunnel_runner"
version = "0.3.0-alpha.1"
description = "Customises the wind_tunnel_runner for Holochain testing"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

wind_tunnel_runner = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
trycp_client_instrumented = { workspace = true }
holochain_client = { workspace = true }
holochain_types = { workspace = true }
wind_tunnel_core = { workspace = true }
holochain_conductor_api = { workspace = true }

[lints]
workspace = true
