[package]
name = "wind_tunnel_core"
description = "Core components for Wind Tunnel"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
version = "0.1.0-alpha.1"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
tokio = { workspace = true }
derive_more = { workspace = true }

[lints]
workspace = true
