[package]
name = "wind_tunnel_core"
version = "0.4.0-alpha.1"
description = "Core components for Wind Tunnel"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
tokio = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
