[package]
name = "wind_tunnel_core"
version.workspace = true
description = "Core components for Wind Tunnel"
documentation = "https://docs.rs/wind_tunnel_core"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
