[package]
name = "wind_tunnel_instruments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
opentelemetry_api = { workspace = true }
influxive-writer = { workspace = true }
influxive-core = { workspace = true }
parking_lot = { workspace = true }
tabled = { workspace = true }

[lints]
workspace = true
