[package]
name = "wind_tunnel_instruments"
version = "0.2.0-alpha.1"
description = "Instruments for measuring performance with Wind Tunnel"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
anyhow = { workspace = true }
opentelemetry_api = { workspace = true }
parking_lot = { workspace = true }
tabled = { workspace = true }
influxdb = { workspace = true, default-features = false }
tokio = { workspace = true }
log = { workspace = true }
influxive-core = { workspace = true }

wind_tunnel_core = { workspace = true }

[lints]
workspace = true
