[package]
name = "wind_tunnel_instruments"
version.workspace = true
description = "Instruments for measuring performance with Wind Tunnel"
documentation = "https://docs.rs/wind_tunnel_instruments"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
parking_lot = { workspace = true }
tabled = { workspace = true }
influxdb = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
influxive-core = { workspace = true }
chrono = { workspace = true }

wind_tunnel_core = { workspace = true }

[lints]
workspace = true
