[package]
name = "wind_tunnel_instruments_derive"
description = "Derive macros for the wind_tunnel_instruments crate"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
version = "0.1.0-alpha.1"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lints]
workspace = true
