[package]
name = "wind_tunnel_instruments_derive"
version.workspace = true
description = "Derive macros for the wind_tunnel_instruments crate"
documentation = "https://docs.rs/wind_tunnel_instruments_derive"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lints]
workspace = true
