[package]
name = "wind_tunnel_runner"
version = "0.3.0-dev.1"
description = "The Wind Tunnel runner"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
derive_more = { workspace = true }
sysinfo = { workspace = true }
indicatif = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }

wind_tunnel_core = { workspace = true }
wind_tunnel_instruments = { workspace = true }
wind_tunnel_summary_model = { workspace = true }

[lints]
workspace = true
