[package]
name = "wind_tunnel_runner"
version.workspace = true
description = "The Wind Tunnel runner"
documentation = "https://docs.rs/wind_tunnel_runner"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
sysinfo = { workspace = true }
indicatif = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }

wind_tunnel_core = { workspace = true }
wind_tunnel_instruments = { workspace = true }
wind_tunnel_summary_model = { workspace = true }

[lints]
workspace = true
