[package]
name = "wind_tunnel_runner"
version.workspace = true
description = "The Wind Tunnel runner"
documentation = "https://docs.rs/wind_tunnel_runner"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
holochain_client_instrumented = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }

wind_tunnel_core = { workspace = true }
wind_tunnel_instruments = { workspace = true }
wind_tunnel_summary_model = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
