[package]
name = "wind_tunnel_summary_model"
version = "0.4.0-alpha.1"
description = "The Wind Tunnel summary model"
license = "MIT"
authors = ["ThetaSinner"]
edition = "2021"
categories = ["development-tools::testing", "development-tools::profiling"]
homepage = "https://github.com/holochain/wind-tunnel"
repository = "https://github.com/holochain/wind-tunnel"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha3 = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
