[package]
name = "wind_tunnel_summary_model"
version.workspace = true
description = "The Wind Tunnel summary model"
documentation = "https://docs.rs/wind_tunnel_summary_model"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha3 = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
